--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 	</div>
 
 	<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
+	<script src="js/jquery.easing.1.2.js"></script>
 	<script src="js/jquery.movingboxes.js"></script>
 	
 	<script>
