--- a/index.html
+++ b/index.html
@@ -7,12 +7,29 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/movingboxes.css">
-	<!-- <link rel="stylesheet" href="demo/demo.css"> -->
+
+	<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
+	<script src="js/jquery.movingboxes.js"></script>
 
 	<style>
 		#slider { width: 850px; height: 396px!important;}
 		#slider li { width: 325px; padding-right: 0!important; padding-left: 0!important;}
 	</style>
+
+	<script type="text/javascript">
+
+		$(document).ready(function(){
+
+			$('#slider').movingBoxes({
+				startPanel   : 2,
+				wrap         : false,
+				buildNav     : true,
+				navFormatter : function(){ return "&#9679;"; }
+			});
+
+		});
+		
+	</script>
 
 </head>
 <body>
@@ -233,24 +250,6 @@
 		</div>
 
 	</div>
-
-	<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
-	<script src="js/jquery.easing.1.2.js"></script>
-	<script src="js/jquery.movingboxes.js"></script>
-	
-	<script>
-		$(function(){
-
-			$('#slider').movingBoxes({
-
-				startPanel   : 2,
-				wrap         : false,
-				buildNav     : true,
-				navFormatter : function(){ return "&#9679;"; }
-			});
-
-		});
-	</script>
 	
 </body>
 </html>
